summative.moria.Moria.scala.error
Erreur de compilation :
Moria:3: error: not found: value EAST
  {setDirection(EAST);avance()}
                ^Moria:4: error: not found: value WEST
if (estSurBiscuit){porteBiscuit();setDirection(WEST);while (!estSurBiscuit()){avance()};recule();poseBiscuit()}
                                               ^