summative.moria.Moria.scala.code
while (getCouleurSol()!=Color.green)
while (!estSurBiscuit() && !estFaceMur())
	{setDirection(EAST);avance()}
if (estSurBiscuit){porteBiscuit();setDirection(WEST);while (!estSurBiscuit()){avance()};recule();poseBiscuit()}
if(estFaceMur){droite();avance();gauche();avance()}